# idsred-red

./: pyproject.toml
idsred/: spec1Dreduc.py  wavecalib.py
idsred/lamps/: init_wavesol.txt
