[project]
name = "idsred-red"
version = "0.1.0"
description = "A fork of IDSRED, a spectroscopic data-reduction pipeline for the Isaac Newton Telescope (INT) Intermediate Dispersion Spectrograph (IDS) instrument."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "astropy>=5.2.2",
    "ccdproc>=2.5.1",
    "lmfit>=1.3.2",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "python-dotenv>=1.0.1",
    "scipy>=1.10.1",
    "specutils>=1.16.0",
]

[build-system]
requires = ["setuptools>=59"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
